--- a/index.html
+++ b/index.html
@@ -16,18 +16,28 @@
   <label for="priceperhourRadio">Price per hour</label>
 
   <input type="radio" id="ofhoursRadio" name="variables">
-  <label for="ofhoursRadio"># of hours</label><br><br>
+  <label for="ofhoursRadio">number of hours</label><br><br>
   <!-- end radio -->
   
   <label for="v1" id="variable1">Price per hour</label>
   <input type="number" id="v1"><br><br>
   
-  <label for="v2" id="variable2"># of hours</label>
+  <label for="v2" id="variable2">number of hours</label>
   <input type="number" id="v2"><br><br>
 
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the cleaning cost<br> 
+    What is the cleaning cost calculator?<br>
+    The cleaning cost calculator is a tool calculates the cost of cleaning a house.<br>
+    How to calculate cleaning cost?<br>
+    To calculate cleaning cost you should use the following formula:<br>
+    house cleaning cost = price per hour * number of hours<br>
+    Why use cleaning cost calculator?<br>
+    The cleaning cost calculator is used in order to measure the cost of cleaning a house.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
